--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 # curv = { package = "curv-kzen", version = "0.7", default-features = false }
 # rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
-rust-gmp-kzen = { version = "0.5" }
+rust-gmp-kzen = { version = "0.5", features = ["serde_support"] }
 rand = "0"
+sha2 = "0"
+digest = "0"
 
 [dev-dependencies]
 bencher = "0.1"
