--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,6 @@ edition = "2018"
 [dependencies]
 rayon = "1.1"
 serde = { version = "1.0", features = ["derive"] }
-# curv = { package = "curv-kzen", version = "0.7", default-features = false }
 # rust-gmp-kzen = { version = "0.5", features = ["serde_support"], optional = true }
 rust-gmp-kzen = { version = "0.5", features = ["serde_support"] }
 rand = "0"
@@ -16,10 +15,7 @@ digest = "0"
 [dev-dependencies]
 bencher = "0.1"
 serde_json = "1.0"
-rand = "0"
-
-# [features]
-# default = ["curv/rust-gmp-kzen"]
+rand_chacha = "0"
 
 [[bench]]
 name = "arith"
